manifests/debug-identity.yml
apiVersion: v1
kind: Pod
metadata:
  name: aad-xdns-sleep
  namespace: default
  labels:
    aadpodidbinding: xdns-label
spec:
  containers:
  - name: aad
    image: mcr.microsoft.com/azure-cli:2.27.2
    command: ['/bin/sleep', 'infinity']
