manifests/debug-sops.yml
apiVersion: v1
kind: Pod
metadata:
  name: sops-sleep
  namespace: flux-system
  labels:
    aadpodidbinding: flux2-sops-reader
spec:
  containers:
  - name: aad
    image: mcr.microsoft.com/azure-cli:2.27.2
    command: ['/bin/sleep', 'infinity']
