manifests/policy-allow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-policy
  namespace: mongodb
spec:
  podSelector:
    matchLabels:
      managedBy: flux2
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: zimcore
